--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
         .menu { display: flex; justify-content: space-around; position: fixed; bottom: 0; left: 0; width: 100%; background: #ffffff; padding: 10px; box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1); z-index: 100; }
         .menu button { flex: 1; margin: 0 5px; display: flex; flex-direction: column; align-items: center; font-size: 0.9rem; padding: 5px; background: #80deea; border: none; }
         .menu img { width: 24px; height: 24px; margin-bottom: 5px; }
-        .profile-img { width: 100px; height: 100px; border-radius: 50%; object-fit: cover; margin: 10px auto; display: block; border: 3px solid #5d4037; }
         .history-item { padding: 10px; border-bottom: 1px solid #ddd; background: #f5f5f5; border-radius: 5px; margin-bottom: 5px; font-size: 0.9rem; }
         .history-header { background: #80deea; padding: 10px; border-radius: 8px; margin-bottom: 10px; border: 2px solid #5d4037; font-size: 0.9rem; }
         .status { padding: 5px 10px; border-radius: 5px; display: inline-block; font-weight: bold; font-size: 0.9rem; }
@@ -36,7 +35,7 @@
     </style>
 </head>
 <body>
-    <div class="id-badge" id="device-id-badge">ID: N/A</div>
+    <div class="id-badge" id="id-badge">ID: Loading...</div>
 
     <!-- Wallet Section -->
     <div id="wallet" class="container active">
@@ -82,7 +81,7 @@
     <div id="mi" class="container">
         <h2>ကျွန်ုပ်၏ပရိုဖိုင်</h2>
         <div class="form-group">
-            <p>သင့် ID: <span id="mi-device-id">N/A</span></p>
+            <p>သင့် ID: <span id="mi-id">Loading...</span></p>
             <p id="mi-status" class="status pending">NRC အတည်ပြုရန် လိုအပ်ပါသည်</p>
             <div id="nrc-form" class="form-group">
                 <h3>NRC အချက်အလက် တင်ပြရန်</h3>
@@ -135,28 +134,29 @@
         const supabaseUrl = 'https://vtsczzlnhsrgnbkfyizi.supabase.co';
         const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZ0c2N6emxuaHNyZ25ia2Z5aXppIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDI2ODYwODMsImV4cCI6MjA1ODI2MjA4M30.LjP2g0WXgg6FVTM5gPIkf_qlXakkj8Hf5xzXVsx7y68';
         const supabase = Supabase.createClient(supabaseUrl, supabaseKey);
+        const imgurClientId = '5befa9dd970c7d0';
 
-        let currentDevice = { device_id: null, balance: 0, nrc_status: 'pending' };
+        let currentUser = { id: null, balance: 0, nrc_status: 'pending' };
 
-        function generateDeviceId() {
-            return Math.floor(100000 + Math.random() * 900000).toString();
+        function generateId() {
+            return Math.floor(100000 + Math.random() * 900000); // 6-digit ID
         }
 
-        async function initializeDevice() {
-            let deviceId = localStorage.getItem('deviceId');
-            if (!deviceId) {
-                deviceId = generateDeviceId();
-                localStorage.setItem('deviceId', deviceId);
-                await supabase.from('users').insert({ device_id: deviceId, balance: 0, nrc_status: 'pending' });
+        async function initializeUser() {
+            let userId = localStorage.getItem('userId');
+            if (!userId) {
+                userId = generateId();
+                localStorage.setItem('userId', userId);
+                await supabase.from('users').insert({ id: userId, balance: 0, nrc_status: 'pending' });
             }
 
-            const { data: user } = await supabase.from('users').select('*').eq('device_id', deviceId).single();
-            currentDevice = user || { device_id: deviceId, balance: 0, nrc_status: 'pending' };
+            const { data: user } = await supabase.from('users').select('*').eq('id', userId).single();
+            currentUser = user || { id: userId, balance: 0, nrc_status: 'pending' };
 
-            document.getElementById('device-id-badge').textContent = `ID: ${deviceId}`;
-            document.getElementById('mi-device-id').textContent = deviceId;
-            document.getElementById('balance').textContent = `${currentDevice.balance} Ks`;
-            updateStatus(currentDevice.nrc_status);
+            document.getElementById('id-badge').textContent = `ID: ${userId}`;
+            document.getElementById('mi-id').textContent = userId;
+            document.getElementById('balance').textContent = `${currentUser.balance} Ks`;
+            updateStatus(currentUser.nrc_status);
             loadHistory();
         }
 
@@ -168,7 +168,7 @@
         }
 
         function toggleTransfer() {
-            if (currentDevice.nrc_status !== 'approved') {
+            if (currentUser.nrc_status !== 'approved') {
                 alert('NRC အတည်ပြုမှသာ ငွေလွှဲနိုင်ပါသည်။');
                 return;
             }
@@ -190,7 +190,7 @@
             const monthFilter = month === 'current' ? new Date().getMonth() : new Date().getMonth() - 1;
             const { data: transactions } = await supabase.from('transactions')
                 .select('*')
-                .or(`from_device_id.eq.${currentDevice.device_id},to_device_id.eq.${currentDevice.device_id}`)
+                .or(`from_id.eq.${currentUser.id},to_id.eq.${currentUser.id}`)
                 .gte('timestamp', new Date(new Date().setMonth(monthFilter)).toISOString().split('T')[0]);
 
             const historyList = document.getElementById('history-list');
@@ -200,9 +200,9 @@
             (transactions || []).forEach(t => {
                 const item = document.createElement('div');
                 item.className = 'history-item';
-                item.innerHTML = `${t.from_device_id === currentDevice.device_id ? 'လွှဲသည်' : 'ဝင်သည်'}: ${t.amount} Ks<br>ID: ${t.from_device_id === currentDevice.device_id ? t.to_device_id : t.from_device_id}<br>မှတ်ချက်: ${t.note || 'မရှိ'}<br>အချိန်: ${t.timestamp}`;
+                item.innerHTML = `${t.from_id === currentUser.id ? 'လွှဲသည်' : 'ဝင်သည်'}: ${t.amount} Ks<br>ID: ${t.from_id === currentUser.id ? t.to_id : t.from_id}<br>မှတ်ချက်: ${t.note || 'မရှိ'}<br>အချိန်: ${t.timestamp}`;
                 historyList.appendChild(item);
-                if (t.from_device_id === currentDevice.device_id) totalOut += t.amount;
+                if (t.from_id === currentUser.id) totalOut += t.amount;
                 else totalIn += t.amount;
             });
 
@@ -222,9 +222,21 @@
                 document.getElementById('transfer-btn').disabled = false;
                 document.getElementById('nrc-form').classList.add('hidden');
                 document.getElementById('nrc-info').classList.remove('hidden');
-                document.getElementById('mi-phone').textContent = currentDevice.phone || 'N/A';
-                document.getElementById('mi-nrc').textContent = currentDevice.nrc_region ? `${currentDevice.nrc_region}/${currentDevice.nrc_town}/${currentDevice.nrc_type} ${currentDevice.nrc_number}` : 'N/A';
+                document.getElementById('mi-phone').textContent = currentUser.phone || 'N/A';
+                document.getElementById('mi-nrc').textContent = currentUser.nrc_region ? `${currentUser.nrc_region}/${currentUser.nrc_town}/${currentUser.nrc_type} ${currentUser.nrc_number}` : 'N/A';
             }
+        }
+
+        async function uploadToImgur(file) {
+            const formData = new FormData();
+            formData.append('image', file);
+            const response = await fetch('https://api.imgur.com/3/image', {
+                method: 'POST',
+                headers: { Authorization: `Client-ID ${imgurClientId}` },
+                body: formData
+            });
+            const data = await response.json();
+            return data.data.link;
         }
 
         document.getElementById('submit-nrc-btn').addEventListener('click', async () => {
@@ -243,20 +255,19 @@
                 return;
             }
 
-            const readFile = (file) => new Promise((resolve) => {
-                const reader = new FileReader();
-                reader.onload = (e) => resolve(e.target.result);
-                reader.readAsDataURL(file);
-            });
+            const [frontUrl, backUrl, selfieUrl] = await Promise.all([
+                uploadToImgur(frontFile),
+                uploadToImgur(backFile),
+                uploadToImgur(selfieFile)
+            ]);
 
-            const [frontImg, backImg, selfieImg] = await Promise.all([readFile(frontFile), readFile(backFile), readFile(selfieFile)]);
             await supabase.from('users').update({
-                phone, pin, nrc_status: 'pending', nrc_front: frontImg, nrc_back: backImg, nrc_selfie: selfieImg,
+                phone, pin, nrc_status: 'pending', nrc_front: frontUrl, nrc_back: backUrl, nrc_selfie: selfieUrl,
                 nrc_region: nrcRegion, nrc_town: nrcTown, nrc_type: nrcType, nrc_number: nrcNumber,
                 submitted_at: new Date().toISOString()
-            }).eq('device_id', currentDevice.device_id);
+            }).eq('id', currentUser.id);
 
-            currentDevice = { ...currentDevice, phone, pin, nrc_status: 'pending', nrc_region: nrcRegion, nrc_town: nrcTown, nrc_type: nrcType, nrc_number: nrcNumber };
+            currentUser = { ...currentUser, phone, pin, nrc_status: 'pending', nrc_region: nrcRegion, nrc_town: nrcTown, nrc_type: nrcType, nrc_number: nrcNumber };
             alert('NRC အချက်အလက် တင်ပြပြီးပါပြီ။ အတည်ပြုရန် စောင့်ဆိုင်းပါ။');
             updateStatus('pending');
         });
@@ -273,7 +284,7 @@
                 return;
             }
 
-            const { data: sender } = await supabase.from('users').select('*').eq('device_id', currentDevice.device_id).eq('pin', pin).single();
+            const { data: sender } = await supabase.from('users').select('*').eq('id', currentUser.id).eq('pin', pin).single();
             const { data: receiver } = await supabase.from('users').select('*').eq('phone', phone).single();
 
             if (!sender || !receiver || sender.balance < amount || receiver.nrc_status !== 'approved') {
@@ -283,12 +294,12 @@
             }
 
             const now = new Date().toLocaleString('en-US', { timeZone: 'Asia/Yangon' });
-            await supabase.from('users').update({ balance: sender.balance - amount }).eq('device_id', currentDevice.device_id);
-            await supabase.from('users').update({ balance: receiver.balance + amount }).eq('device_id', receiver.device_id);
-            await supabase.from('transactions').insert({ from_device_id: currentDevice.device_id, to_device_id: receiver.device_id, amount, note, timestamp: now });
+            await supabase.from('users').update({ balance: sender.balance - amount }).eq('id', currentUser.id);
+            await supabase.from('users').update({ balance: receiver.balance + amount }).eq('id', receiver.id);
+            await supabase.from('transactions').insert({ from_id: currentUser.id, to_id: receiver.id, amount, note, timestamp: now });
 
-            currentDevice.balance = sender.balance - amount;
-            document.getElementById('balance').textContent = `${currentDevice.balance} Ks`;
+            currentUser.balance = sender.balance - amount;
+            document.getElementById('balance').textContent = `${currentUser.balance} Ks`;
             document.getElementById('transfer-error').classList.add('hidden');
             document.getElementById('transfer').classList.add('hidden');
             loadHistory();
@@ -300,7 +311,7 @@
             setTimeout(() => animation.remove(), 1500);
         });
 
-        window.onload = initializeDevice;
+        window.onload = initializeUser;
     </script>
 </body>
 </html>
