--- a/server.html
+++ b/server.html
@@ -74,79 +74,103 @@
     <script>
         const supabaseUrl = 'https://vtsczzlnhsrgnbkfyizi.supabase.co';
         const supabaseServiceKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZ0c2N6emxuaHNyZ25ia2Z5aXppIiwicm9sZSI6InNlcnZpY2Vfcm9sZSIsImlhdCI6MTc0MjY4NjA4MywiZXhwIjoyMDU4MjYyMDgzfQ._Jl-xGTucb9JVIENi33RqKv6SD8FyWqcwABqvU0xtzc';
-        const supabase = Supabase.createClient(supabaseUrl, supabaseServiceKey);
+        const supabase = window.supabase.createClient(supabaseUrl, supabaseServiceKey);
 
         async function loadUsers() {
-            const { data: users } = await supabase.from('users').select('*').eq('nrc_status', 'pending');
-            const userList = document.getElementById('user-list');
-            userList.innerHTML = '';
+            try {
+                const { data: users, error } = await supabase.from('users').select('*').eq('nrc_status', 'pending');
+                if (error) throw error;
+                const userList = document.getElementById('user-list');
+                userList.innerHTML = '';
 
-            (users || []).forEach(user => {
-                const item = document.createElement('div');
-                item.className = 'user-item';
-                item.innerHTML = `
-                    ID: ${user.id} | ဖုန်း: ${user.phone || 'N/A'}<br>
-                    NRC: ${user.nrc_region}/${user.nrc_town}/${user.nrc_type} ${user.nrc_number}<br>
-                    <img src="${user.nrc_front}" alt="Front"> <img src="${user.nrc_back}" alt="Back"> <img src="${user.nrc_selfie}" alt="Selfie"><br>
-                    <button class="approve-btn" onclick="updateNrcStatus(${user.id}, 'approved')">အတည်ပြု</button>
-                    <button class="reject-btn" onclick="updateNrcStatus(${user.id}, 'rejected')">ငြင်းဆို</button>
-                `;
-                userList.appendChild(item);
-            });
+                (users || []).forEach(user => {
+                    const item = document.createElement('div');
+                    item.className = 'user-item';
+                    item.innerHTML = `
+                        ID: ${user.id} | ဖုန်း: ${user.phone || 'N/A'}<br>
+                        NRC: ${user.nrc_region}/${user.nrc_town}/${user.nrc_type} ${user.nrc_number}<br>
+                        <img src="${user.nrc_front}" alt="Front"> <img src="${user.nrc_back}" alt="Back"> <img src="${user.nrc_selfie}" alt="Selfie"><br>
+                        <button class="approve-btn" onclick="updateNrcStatus(${user.id}, 'approved')">အတည်ပြု</button>
+                        <button class="reject-btn" onclick="updateNrcStatus(${user.id}, 'rejected')">ငြင်းဆို</button>
+                    `;
+                    userList.appendChild(item);
+                });
+            } catch (error) {
+                console.error('Load Users Error:', error.message);
+            }
         }
 
         async function updateNrcStatus(id, status) {
-            await supabase.from('users').update({ nrc_status: status }).eq('id', id);
-            alert(`ID ${id} ကို ${status === 'approved' ? 'အတည်ပြု' : 'ငြင်းဆို'} ပြီးပါပြီ။`);
-            loadUsers();
+            try {
+                const { error } = await supabase.from('users').update({ nrc_status: status }).eq('id', id);
+                if (error) throw error;
+                alert(`ID ${id} ကို ${status === 'approved' ? 'အတည်ပြု' : 'ငြင်းဆို'} ပြီးပါပြီ။`);
+                loadUsers();
+            } catch (error) {
+                console.error('Update NRC Status Error:', error.message);
+                alert('NRC အတည်ပြုမှု အမှားဖြစ်ပွားခဲ့သည်။');
+            }
         }
 
         async function processDepositWithdraw() {
-            const phone = document.getElementById('dw-phone').value;
-            const amount = parseInt(document.getElementById('dw-amount').value);
-            const type = document.getElementById('dw-type').value;
+            try {
+                const phone = document.getElementById('dw-phone').value;
+                const amount = parseInt(document.getElementById('dw-amount').value);
+                const type = document.getElementById('dw-type').value;
 
-            if (!phone.match(/^09\d{9}$/) || amount <= 0) {
-                alert('ဖုန်းနံပါတ် သို့မဟုတ် ပမာဏ မမှန်ပါ။');
-                return;
+                if (!phone.match(/^09\d{9}$/) || amount <= 0) {
+                    alert('ဖုန်းနံပါတ် သို့မဟုတ် ပမာဏ မမှန်ပါ။');
+                    return;
+                }
+
+                const { data: user, error: userError } = await supabase.from('users').select('*').eq('phone', phone).single();
+                if (userError) throw userError;
+                if (!user || user.nrc_status !== 'approved') {
+                    alert('အကောင့်မရှိပါ သို့မဟုတ် NRC အတည်မပြုရသေးပါ။');
+                    return;
+                }
+
+                const newBalance = type === 'deposit' ? user.balance + amount : user.balance - amount;
+                if (newBalance < 0) {
+                    alert('လက်ကျန်မလုံလောက်ပါ။');
+                    return;
+                }
+
+                const { error: updateError } = await supabase.from('users').update({ balance: newBalance }).eq('id', user.id);
+                if (updateError) throw updateError;
+                const { error: insertError } = await supabase.from('transactions').insert({
+                    from_id: type === 'withdraw' ? user.id : 'server',
+                    to_id: type === 'deposit' ? user.id : 'server',
+                    amount: amount,
+                    note: `${type === 'deposit' ? 'ငွေသွင်း' : 'ငွေထုတ်'} by Server`,
+                    timestamp: new Date().toLocaleString('en-US', { timeZone: 'Asia/Yangon' })
+                });
+                if (insertError) throw insertError;
+
+                alert(`${type === 'deposit' ? 'ငွေသွင်း' : 'ငွေထုတ်'} ပြီးပါပြီ။ လက်ကျန်: ${newBalance} Ks`);
+                loadHistory();
+            } catch (error) {
+                console.error('Deposit/Withdraw Error:', error.message);
+                alert('ငွေသွင်း/ထုတ် အမှားဖြစ်ပွားခဲ့သည်။');
             }
-
-            const { data: user } = await supabase.from('users').select('*').eq('phone', phone).single();
-            if (!user || user.nrc_status !== 'approved') {
-                alert('အကောင့်မရှိပါ သို့မဟုတ် NRC အတည်မပြုရသေးပါ။');
-                return;
-            }
-
-            const newBalance = type === 'deposit' ? user.balance + amount : user.balance - amount;
-            if (newBalance < 0) {
-                alert('လက်ကျန်မလုံလောက်ပါ။');
-                return;
-            }
-
-            await supabase.from('users').update({ balance: newBalance }).eq('id', user.id);
-            await supabase.from('transactions').insert({
-                from_id: type === 'withdraw' ? user.id : 'server',
-                to_id: type === 'deposit' ? user.id : 'server',
-                amount: amount,
-                note: `${type === 'deposit' ? 'ငွေသွင်း' : 'ငွေထုတ်'} by Server`,
-                timestamp: new Date().toLocaleString('en-US', { timeZone: 'Asia/Yangon' })
-            });
-
-            alert(`${type === 'deposit' ? 'ငွေသွင်း' : 'ငွေထုတ်'} ပြီးပါပြီ။ လက်ကျန်: ${newBalance} Ks`);
-            loadHistory();
         }
 
         async function loadHistory() {
-            const { data: transactions } = await supabase.from('transactions').select('*').order('timestamp', { ascending: false });
-            const historyList = document.getElementById('history-list');
-            historyList.innerHTML = '';
+            try {
+                const { data: transactions, error } = await supabase.from('transactions').select('*').order('timestamp', { ascending: false });
+                if (error) throw error;
+                const historyList = document.getElementById('history-list');
+                historyList.innerHTML = '';
 
-            (transactions || []).forEach(t => {
-                const item = document.createElement('div');
-                item.className = 'history-item';
-                item.innerHTML = `${t.from_id === 'server' ? 'ငွေသွင်း' : t.to_id === 'server' ? 'ငွေထုတ်' : 'လွှဲသည်'}: ${t.amount} Ks<br>မှ: ${t.from_id} သို့: ${t.to_id}<br>မှတ်ချက်: ${t.note || 'မရှိ'}<br>အချိန်: ${t.timestamp}`;
-                historyList.appendChild(item);
-            });
+                (transactions || []).forEach(t => {
+                    const item = document.createElement('div');
+                    item.className = 'history-item';
+                    item.innerHTML = `${t.from_id === 'server' ? 'ငွေသွင်း' : t.to_id === 'server' ? 'ငွေထုတ်' : 'လွှဲသည်'}: ${t.amount} Ks<br>မှ: ${t.from_id} သို့: ${t.to_id}<br>မှတ်ချက်: ${t.note || 'မရှိ'}<br>အချိန်: ${t.timestamp}`;
+                    historyList.appendChild(item);
+                });
+            } catch (error) {
+                console.error('Load History Error:', error.message);
+            }
         }
 
         window.onload = () => {
