--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <script>
         const supabaseUrl = 'https://vtsczzlnhsrgnbkfyizi.supabase.co';
         const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZ0c2N6emxuaHNyZ25ia2Z5aXppIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDI2ODYwODMsImV4cCI6MjA1ODI2MjA4M30.LjP2g0WXgg6FVTM5gPIkf_qlXakkj8Hf5xzXVsx7y68';
-        const supabase = Supabase.createClient(supabaseUrl, supabaseKey);
+        const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
         const imgurClientId = '5befa9dd970c7d0';
 
         let currentUser = { id: null, balance: 0, nrc_status: 'pending' };
@@ -143,21 +143,28 @@
         }
 
         async function initializeUser() {
-            let userId = localStorage.getItem('userId');
-            if (!userId) {
-                userId = generateId();
-                localStorage.setItem('userId', userId);
-                await supabase.from('users').insert({ id: userId, balance: 0, nrc_status: 'pending' });
+            try {
+                let userId = localStorage.getItem('userId');
+                if (!userId) {
+                    userId = generateId();
+                    localStorage.setItem('userId', userId);
+                    const { error } = await supabase.from('users').insert({ id: userId, balance: 0, nrc_status: 'pending' });
+                    if (error) throw error;
+                }
+
+                const { data: user, error } = await supabase.from('users').select('*').eq('id', userId).single();
+                if (error) throw error;
+                currentUser = user || { id: userId, balance: 0, nrc_status: 'pending' };
+
+                document.getElementById('id-badge').textContent = `ID: ${userId}`;
+                document.getElementById('mi-id').textContent = userId;
+                document.getElementById('balance').textContent = `${currentUser.balance} Ks`;
+                updateStatus(currentUser.nrc_status);
+                loadHistory();
+            } catch (error) {
+                console.error('Initialization Error:', error.message);
+                alert('အမှားတစ်ခု ဖြစ်ပွားခဲ့သည်။ ထပ်ကြိုးစားပါ။');
             }
-
-            const { data: user } = await supabase.from('users').select('*').eq('id', userId).single();
-            currentUser = user || { id: userId, balance: 0, nrc_status: 'pending' };
-
-            document.getElementById('id-badge').textContent = `ID: ${userId}`;
-            document.getElementById('mi-id').textContent = userId;
-            document.getElementById('balance').textContent = `${currentUser.balance} Ks`;
-            updateStatus(currentUser.nrc_status);
-            loadHistory();
         }
 
         function showSection(sectionId) {
@@ -178,7 +185,8 @@
         async function checkPhone() {
             const phone = document.getElementById('transfer-phone').value;
             if (phone.match(/^09\d{9}$/)) {
-                const { data: receiver } = await supabase.from('users').select('phone, nrc_status').eq('phone', phone).single();
+                const { data: receiver, error } = await supabase.from('users').select('phone, nrc_status').eq('phone', phone).single();
+                if (error) console.error('Check Phone Error:', error.message);
                 document.getElementById('receiver-name').textContent = receiver && receiver.nrc_status === 'approved' ? `လက်ခံသူ: ${phone}` : 'အကောင့်မရှိပါ သို့မဟုတ် NRC အတည်မပြုရသေးပါ။';
             } else {
                 document.getElementById('receiver-name').textContent = '';
@@ -186,28 +194,33 @@
         }
 
         async function loadHistory() {
-            const month = document.getElementById('month-filter').value;
-            const monthFilter = month === 'current' ? new Date().getMonth() : new Date().getMonth() - 1;
-            const { data: transactions } = await supabase.from('transactions')
-                .select('*')
-                .or(`from_id.eq.${currentUser.id},to_id.eq.${currentUser.id}`)
-                .gte('timestamp', new Date(new Date().setMonth(monthFilter)).toISOString().split('T')[0]);
+            try {
+                const month = document.getElementById('month-filter').value;
+                const monthFilter = month === 'current' ? new Date().getMonth() : new Date().getMonth() - 1;
+                const { data: transactions, error } = await supabase.from('transactions')
+                    .select('*')
+                    .or(`from_id.eq.${currentUser.id},to_id.eq.${currentUser.id}`)
+                    .gte('timestamp', new Date(new Date().setMonth(monthFilter)).toISOString().split('T')[0]);
+                if (error) throw error;
 
-            const historyList = document.getElementById('history-list');
-            historyList.innerHTML = '';
-            let totalIn = 0, totalOut = 0;
+                const historyList = document.getElementById('history-list');
+                historyList.innerHTML = '';
+                let totalIn = 0, totalOut = 0;
 
-            (transactions || []).forEach(t => {
-                const item = document.createElement('div');
-                item.className = 'history-item';
-                item.innerHTML = `${t.from_id === currentUser.id ? 'လွှဲသည်' : 'ဝင်သည်'}: ${t.amount} Ks<br>ID: ${t.from_id === currentUser.id ? t.to_id : t.from_id}<br>မှတ်ချက်: ${t.note || 'မရှိ'}<br>အချိန်: ${t.timestamp}`;
-                historyList.appendChild(item);
-                if (t.from_id === currentUser.id) totalOut += t.amount;
-                else totalIn += t.amount;
-            });
+                (transactions || []).forEach(t => {
+                    const item = document.createElement('div');
+                    item.className = 'history-item';
+                    item.innerHTML = `${t.from_id === currentUser.id ? 'လွှဲသည်' : 'ဝင်သည်'}: ${t.amount} Ks<br>ID: ${t.from_id === currentUser.id ? t.to_id : t.from_id}<br>မှတ်ချက်: ${t.note || 'မရှိ'}<br>အချိန်: ${t.timestamp}`;
+                    historyList.appendChild(item);
+                    if (t.from_id === currentUser.id) totalOut += t.amount;
+                    else totalIn += t.amount;
+                });
 
-            document.getElementById('total-in').textContent = `${totalIn} Ks`;
-            document.getElementById('total-out').textContent = `${totalOut} Ks`;
+                document.getElementById('total-in').textContent = `${totalIn} Ks`;
+                document.getElementById('total-out').textContent = `${totalOut} Ks`;
+            } catch (error) {
+                console.error('Load History Error:', error.message);
+            }
         }
 
         function updateStatus(status) {
@@ -228,87 +241,110 @@
         }
 
         async function uploadToImgur(file) {
-            const formData = new FormData();
-            formData.append('image', file);
-            const response = await fetch('https://api.imgur.com/3/image', {
-                method: 'POST',
-                headers: { Authorization: `Client-ID ${imgurClientId}` },
-                body: formData
-            });
-            const data = await response.json();
-            return data.data.link;
+            try {
+                const formData = new FormData();
+                formData.append('image', file);
+                const response = await fetch('https://api.imgur.com/3/image', {
+                    method: 'POST',
+                    headers: { Authorization: `Client-ID ${imgurClientId}` },
+                    body: formData
+                });
+                const data = await response.json();
+                if (!data.success) throw new Error('Imgur Upload Failed');
+                return data.data.link;
+            } catch (error) {
+                console.error('Imgur Upload Error:', error.message);
+                throw error;
+            }
         }
 
         document.getElementById('submit-nrc-btn').addEventListener('click', async () => {
-            const nrcRegion = document.getElementById('nrc-region').value;
-            const nrcTown = document.getElementById('nrc-town').value;
-            const nrcType = document.getElementById('nrc-type').value;
-            const nrcNumber = document.getElementById('nrc-number').value;
-            const phone = document.getElementById('nrc-phone').value;
-            const pin = document.getElementById('nrc-pin').value;
-            const frontFile = document.getElementById('nrc-front').files[0];
-            const backFile = document.getElementById('nrc-back').files[0];
-            const selfieFile = document.getElementById('nrc-selfie').files[0];
+            try {
+                const nrcRegion = document.getElementById('nrc-region').value;
+                const nrcTown = document.getElementById('nrc-town').value;
+                const nrcType = document.getElementById('nrc-type').value;
+                const nrcNumber = document.getElementById('nrc-number').value;
+                const phone = document.getElementById('nrc-phone').value;
+                const pin = document.getElementById('nrc-pin').value;
+                const frontFile = document.getElementById('nrc-front').files[0];
+                const backFile = document.getElementById('nrc-back').files[0];
+                const selfieFile = document.getElementById('nrc-selfie').files[0];
 
-            if (!nrcRegion || !nrcTown || !nrcType || !nrcNumber.match(/^\d{6}$/) || !phone.match(/^09\d{9}$/) || pin.length !== 6 || !frontFile || !backFile || !selfieFile) {
-                alert('အချက်အလက်များကို ပြည့်စုံစွာ ဖြည့်ပါ။');
-                return;
+                if (!nrcRegion || !nrcTown || !nrcType || !nrcNumber.match(/^\d{6}$/) || !phone.match(/^09\d{9}$/) || pin.length !== 6 || !frontFile || !backFile || !selfieFile) {
+                    alert('အချက်အလက်များကို ပြည့်စုံစွာ ဖြည့်ပါ။');
+                    return;
+                }
+
+                const [frontUrl, backUrl, selfieUrl] = await Promise.all([
+                    uploadToImgur(frontFile),
+                    uploadToImgur(backFile),
+                    uploadToImgur(selfieFile)
+                ]);
+
+                const { error } = await supabase.from('users').update({
+                    phone, pin, nrc_status: 'pending', nrc_front: frontUrl, nrc_back: backUrl, nrc_selfie: selfieUrl,
+                    nrc_region: nrcRegion, nrc_town: nrcTown, nrc_type: nrcType, nrc_number: nrcNumber,
+                    submitted_at: new Date().toISOString()
+                }).eq('id', currentUser.id);
+                if (error) throw error;
+
+                currentUser = { ...currentUser, phone, pin, nrc_status: 'pending', nrc_region: nrcRegion, nrc_town: nrcTown, nrc_type: nrcType, nrc_number: nrcNumber };
+                alert('NRC အချက်အလက် တင်ပြပြီးပါပြီ။ အတည်ပြုရန် စောင့်ဆိုင်းပါ။');
+                updateStatus('pending');
+            } catch (error) {
+                console.error('Submit NRC Error:', error.message);
+                alert('NRC တင်ရာတွင် အမှားဖြစ်ပွားခဲ့သည်။');
             }
-
-            const [frontUrl, backUrl, selfieUrl] = await Promise.all([
-                uploadToImgur(frontFile),
-                uploadToImgur(backFile),
-                uploadToImgur(selfieFile)
-            ]);
-
-            await supabase.from('users').update({
-                phone, pin, nrc_status: 'pending', nrc_front: frontUrl, nrc_back: backUrl, nrc_selfie: selfieUrl,
-                nrc_region: nrcRegion, nrc_town: nrcTown, nrc_type: nrcType, nrc_number: nrcNumber,
-                submitted_at: new Date().toISOString()
-            }).eq('id', currentUser.id);
-
-            currentUser = { ...currentUser, phone, pin, nrc_status: 'pending', nrc_region: nrcRegion, nrc_town: nrcTown, nrc_type: nrcType, nrc_number: nrcNumber };
-            alert('NRC အချက်အလက် တင်ပြပြီးပါပြီ။ အတည်ပြုရန် စောင့်ဆိုင်းပါ။');
-            updateStatus('pending');
         });
 
         document.getElementById('confirm-transfer-btn').addEventListener('click', async () => {
-            const phone = document.getElementById('transfer-phone').value;
-            const amount = parseInt(document.getElementById('transfer-amount').value);
-            const note = document.getElementById('transfer-note').value;
-            const pin = document.getElementById('transfer-pin').value;
+            try {
+                const phone = document.getElementById('transfer-phone').value;
+                const amount = parseInt(document.getElementById('transfer-amount').value);
+                const note = document.getElementById('transfer-note').value;
+                const pin = document.getElementById('transfer-pin').value;
 
-            if (!phone.match(/^09\d{9}$/) || amount > 1000000 || amount <= 0 || pin.length !== 6) {
-                document.getElementById('transfer-error').textContent = 'ထည့်သွင်းမှု မမှန်ပါ။ အများဆုံး 1,000,000 Ks';
+                if (!phone.match(/^09\d{9}$/) || amount > 1000000 || amount <= 0 || pin.length !== 6) {
+                    document.getElementById('transfer-error').textContent = 'ထည့်သွင်းမှု မမှန်ပါ။ အများဆုံး 1,000,000 Ks';
+                    document.getElementById('transfer-error').classList.remove('hidden');
+                    return;
+                }
+
+                const { data: sender, error: senderError } = await supabase.from('users').select('*').eq('id', currentUser.id).eq('pin', pin).single();
+                if (senderError) throw senderError;
+                const { data: receiver, error: receiverError } = await supabase.from('users').select('*').eq('phone', phone).single();
+                if (receiverError) throw receiverError;
+
+                if (!sender || !receiver || sender.balance < amount || receiver.nrc_status !== 'approved') {
+                    document.getElementById('transfer-error').textContent = !sender ? 'PIN မမှန်ပါ။' : !receiver ? 'လက်ခံသူ အကောင့်မရှိပါ။' : sender.balance < amount ? 'လက်ကျန်မလုံလောက်ပါ။' : 'လက်ခံသူ NRC အတည်မပြုရသေးပါ။';
+                    document.getElementById('transfer-error').classList.remove('hidden');
+                    return;
+                }
+
+                const now = new Date().toLocaleString('en-US', { timeZone: 'Asia/Yangon' });
+                const { error: updateSenderError } = await supabase.from('users').update({ balance: sender.balance - amount }).eq('id', currentUser.id);
+                if (updateSenderError) throw updateSenderError;
+                const { error: updateReceiverError } = await supabase.from('users').update({ balance: receiver.balance + amount }).eq('id', receiver.id);
+                if (updateReceiverError) throw updateReceiverError;
+                const { error: insertError } = await supabase.from('transactions').insert({ from_id: currentUser.id, to_id: receiver.id, amount, note, timestamp: now });
+                if (insertError) throw insertError;
+
+                currentUser.balance = sender.balance - amount;
+                document.getElementById('balance').textContent = `${currentUser.balance} Ks`;
+                document.getElementById('transfer-error').classList.add('hidden');
+                document.getElementById('transfer').classList.add('hidden');
+                loadHistory();
+
+                const animation = document.createElement('div');
+                animation.className = 'transfer-animation';
+                animation.innerHTML = `${amount} Ks လွှဲပြီးပါပြီ<br><span style="font-size: 2rem;">✔</span>`;
+                document.body.appendChild(animation);
+                setTimeout(() => animation.remove(), 1500);
+            } catch (error) {
+                console.error('Transfer Error:', error.message);
+                document.getElementById('transfer-error').textContent = 'ငွေလွှဲရာတွင် အမှားဖြစ်ပွားခဲ့သည်။';
                 document.getElementById('transfer-error').classList.remove('hidden');
-                return;
             }
-
-            const { data: sender } = await supabase.from('users').select('*').eq('id', currentUser.id).eq('pin', pin).single();
-            const { data: receiver } = await supabase.from('users').select('*').eq('phone', phone).single();
-
-            if (!sender || !receiver || sender.balance < amount || receiver.nrc_status !== 'approved') {
-                document.getElementById('transfer-error').textContent = !sender ? 'PIN မမှန်ပါ။' : !receiver ? 'လက်ခံသူ အကောင့်မရှိပါ။' : sender.balance < amount ? 'လက်ကျန်မလုံလောက်ပါ။' : 'လက်ခံသူ NRC အတည်မပြုရသေးပါ။';
-                document.getElementById('transfer-error').classList.remove('hidden');
-                return;
-            }
-
-            const now = new Date().toLocaleString('en-US', { timeZone: 'Asia/Yangon' });
-            await supabase.from('users').update({ balance: sender.balance - amount }).eq('id', currentUser.id);
-            await supabase.from('users').update({ balance: receiver.balance + amount }).eq('id', receiver.id);
-            await supabase.from('transactions').insert({ from_id: currentUser.id, to_id: receiver.id, amount, note, timestamp: now });
-
-            currentUser.balance = sender.balance - amount;
-            document.getElementById('balance').textContent = `${currentUser.balance} Ks`;
-            document.getElementById('transfer-error').classList.add('hidden');
-            document.getElementById('transfer').classList.add('hidden');
-            loadHistory();
-
-            const animation = document.createElement('div');
-            animation.className = 'transfer-animation';
-            animation.innerHTML = `${amount} Ks လွှဲပြီးပါပြီ<br><span style="font-size: 2rem;">✔</span>`;
-            document.body.appendChild(animation);
-            setTimeout(() => animation.remove(), 1500);
         });
 
         window.onload = initializeUser;
